# sjbills

./: .gitignore  README.md  conf.py  csv_file_example.csv  generate_bill.py  pyproject.toml  requirements.txt
templates/: bill.html
