[tool.poetry]
name = "sjbills"
version = "0.1.0"
description = "Generate bills"
authors = ["Fabrice Depaulis <fabrice.depaulis@orange.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pdfkit = "^1.0.0"
Jinja2 = "^3.1.2"
click = "^8.1.3"
pendulum = "^2.1.2"
loguru = "^0.6.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
